--- a/charts/worker-upgrade-v2/value-migrations/to-v2.yaml
+++ b/charts/worker-upgrade-v2/value-migrations/to-v2.yaml
@@ -8,9 +8,17 @@ agent:
     initial:
       environments: [{{ quoteEach .agent.targetEnvironments  }}]
       tags: [{{ quoteEach .agent.targetRoles }} ]
+      {{- if .agent.targetTenantedDeploymentParticipation }}
       targetTenantedDeploymentParticipation: {{ .agent.targetTenantedDeploymentParticipation }}
+      {{ end}}
+      {{- if .agent.targetTenants }}
       tenants: [{{ quoteEach .agent.targetTenants }}]
+      {{- end }}
+      {{- if .agent.targetTenantTags }}
       tenantTags: [{{ quoteEach .agent.targetTenantTags }}]
+      {{- end }}
+      {{- if .agent.defaultNamespace }}
       defaultNamespace: "{{ .agent.defaultNamespace}}"
+      {{- end }}
 
 
