--- a/charts/worker-upgrade-v2/value-migrations/to-v2.yaml
+++ b/charts/worker-upgrade-v2/value-migrations/to-v2.yaml
@@ -22,11 +22,20 @@ agent:
       {{- end }}
   targetName: null
   targetEnvironments: null
+  {{- if .agent.defaultNamespace }}
   defaultNamespace: null
+  {{- end}}
   targetRoles: null
+  {{- if .agent.targetTenantTags }}
   targetTenantTags: null
+  {{- end}}
+  {{- if .agent.targetTenants }}
   targetTenants: null
+  {{- end}}
+  {{- if .agent.targetTenantedDeploymentParticipation }}
   targetTenantedDeploymentParticipation: null
-  scriptPods: null
-
-
+  {{- end}}
+  {{- if .agent.scriptPods.image }}
+  scriptPods:
+    image: null
+  {{- end}}
